# solana-repos

./: .gitignore  README.md
close-account/: Anchor.toml  README.md
close-account/programs/close-account/src/: lib.rs
close-account/tests/: check_closed_account.ts
token-program-example/: Anchor.toml  README.md  package-lock.json  package.json
token-program-example/programs/token-program-example/: Cargo.toml
token-program-example/programs/token-program-example/src/: lib.rs
token-program-example/tests/: token-program-example.ts
tokenaccount-and-ata/: .gitignore  README.md  client.ts  package-lock.json  package.json  tsconfig.json
