[package]
name = "token-program-example"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_program_example"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-spl = { version = "0.30.1", features = ["metadata"] }
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
mpl-token-metadata = "5.1.0"
